# protean

./: .gitignore  .gitmodules  CLAUDE.md  README.md  ROADMAP.md  ladder_history.jsonl  pyproject.toml  run_parser.py
plans/: pokemon-rl-plan-v2.md  pokemon-rl-plan.md
protean/: model.py  obs_space.py  pokedex.py  pov.py  rl_env.py  teams.py  tokenizer.py
protean.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
protean/backend/: team_inference.py  usage_stats.py
protean/backend/replay_parser/: __init__.py  loader.py  parser.py  types.py
protean/data/: gen1ou_vocab.json
scripts/: build_gen1ou_dataset.py  eval_bc.py  eval_heuristic.py  eval_rl.py  ladder.py  play_vs_agent.py  random_vs_random.py  run_battle.py  run_parser.py  setup_showdown.sh  start_server.sh  train_bc.py  train_ppo.py
src/protean.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/protean/agents/: __init__.py  heuristic.py
src/protean/encoding/: __init__.py  battle.py
src/protean/eval/: __init__.py  arena.py
tests/: test_imports.py
