[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "protean"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "poke-env>=0.15.0",
    "numpy",
    "datasets>=2.0",
]

[project.optional-dependencies]
dev = ["pytest"]

[tool.setuptools.packages.find]
where = ["."]
include = ["protean*"]
